<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <revision>0.22-SNAPSHOT</revision>
    </properties>

    <parent>
        <groupId>io.github.ralfspoeth</groupId>
        <artifactId>plumbum</artifactId>
        <version>3.0.2</version>
    </parent>

    <groupId>io.github.ralfspoeth.xldr</groupId>
    <modules>
        <!-- the library part -->
        <module>spec</module>
        <module>ia</module>
        <module>ldr</module>
        <!-- input adapter implementation modules -->
        <module>csv</module>
        <module>flt</module>
        <module>json</module>
        <module>xml</module>
        <module>xlsx</module>
        <!-- bill of materials -->
        <module>bom</module>
        <!-- the server, embeddable without the distribution's decisions -->
        <module>server</module>
        <!-- app and it are part of the reactor but not published -->
        <module>app</module>
        <module>it</module>
    </modules>
    <artifactId>xldr</artifactId>

    <version>${revision}</version>
    <packaging>pom</packaging>

    <name>xldr</name>
    <description>
        A modular toolkit that loads files
        into database tables from a mapping specification,
        and ships implementations for CSV, fixed-length, JSON, XML and Excel files.
    </description>
    <url>https://github.com/ralfspoeth/xldr</url>

    <!-- declared here rather than inherited: the terms of an artifact should be
         readable without resolving its parent -->
    <licenses>
        <license>
            <name>MIT License</name>
            <url>https://opensource.org/license/mit/</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <scm>
        <url>scm:git:https://github.com/ralfspoeth/xldr</url>
        <developerConnection>scm:git:https://github.com/ralfspoeth/xldr.git</developerConnection>
        <tag>HEAD</tag>
    </scm>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.junit</groupId>
                <artifactId>junit-bom</artifactId>
                <version>6.1.3</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>com.h2database</groupId>
                <artifactId>h2</artifactId>
                <version>2.4.240</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>2.0.18</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-jdk14</artifactId>
                <version>2.0.18</version>
            </dependency>
            <dependency>
                <groupId>io.github.ralfspoeth</groupId>
                <artifactId>json</artifactId>
                <version>1.6.2</version>
            </dependency>
            <dependency>
                <groupId>io.github.ralfspoeth</groupId>
                <artifactId>xmls</artifactId>
                <version>0.11.0</version>
            </dependency>
            <dependency>
                <groupId>io.github.ralfspoeth</groupId>
                <artifactId>filews</artifactId>
                <version>0.4</version>
            </dependency>
            <dependency>
                <groupId>info.picocli</groupId>
                <artifactId>picocli</artifactId>
                <version>4.7.7</version>
            </dependency>
            <dependency>
                <groupId>org.apache.poi</groupId>
                <artifactId>poi</artifactId>
                <version>5.5.1</version>
            </dependency>
            <dependency>
                <groupId>org.apache.poi</groupId>
                <artifactId>poi-ooxml</artifactId>
                <version>5.5.1</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <release>25</release>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-enforcer-plugin</artifactId>
                    <executions>
                        <execution>
                            <id>enforce-maven</id>
                            <goals>
                                <goal>enforce</goal>
                            </goals>
                            <configuration>
                                <rules>
                                    <requireMavenVersion>
                                        <version>3.6.3</version>
                                    </requireMavenVersion>
                                </rules>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>versions-maven-plugin</artifactId>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>flatten-maven-plugin</artifactId>
                    <version>1.8.0</version>
                    <configuration>
                        <updatePomFile>true</updatePomFile>
                        <flattenMode>resolveCiFriendliesOnly</flattenMode>
                    </configuration>
                    <executions>
                        <execution>
                            <id>flatten</id>
                            <phase>process-resources</phase>
                            <goals>
                                <goal>flatten</goal>
                            </goals>
                        </execution>
                        <execution>
                            <id>flatten.clean</id>
                            <phase>clean</phase>
                            <goals>
                                <goal>clean</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <configuration>
                    <!-- Run the integration tests once, not twice.
                         release:prepare runs `clean verify` before the tag is
                         cut, which is the gate worth having; release:perform
                         then rebuilds the very source that just verified, so
                         running them again buys nothing but minutes.

                         `goals` is the only perform-only lever the plugin has:
                         `arguments` and `releaseProfiles` are shared with
                         prepare, and `useReleaseProfile` - which would have set
                         `performRelease` for a profile to key on - defaults to
                         false since 3.x and is deprecated. The default here is
                         plain `deploy`, there being no distributionManagement
                         <site> to add `site-deploy` for. -->
                    <goals>deploy -DskipITs</goals>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
            </plugin>
        </plugins>
    </build>
</project>